--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,1 @@
-version: '3.8'
-
-services:
-  api:
-    build: .
-    ports:
-      - "8000:8000"
-    env_file: .env
-    depends_on:
-      - redis
-      - postgres
-    command: gunicorn app.main:app --workers 4 --bind 0.0.0.0:8000
-
-  postgres:
-    image: postgres:13-alpine
-    env_file: .env
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-
-  redis:
-    image: redis:6-alpine
-    ports:
-      - "6379:6379"
-
-volumes:
-  pg_data:
+There was an error committing your changes: A file with the same name already exists. Please choose a different name and try again.
