--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,48 @@
-There was an error committing your changes: A file with the same name already exists. Please choose a different name and try again.
+version: '3.8'
+
+services:
+  app:
+    build: .
+    ports:
+      - "8000:8000"
+    env_file: .env
+    depends_on:
+      - redis
+      - postgres
+    volumes:
+      - ./src:/app/src  # Hot-reload para desenvolvimento
+    command: gunicorn app.main:app --workers 4 --bind 0.0.0.0:8000
+
+  redis:
+    image: redis:6-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  postgres:
+    image: postgres:13-alpine
+    env_file: .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  celery-worker:
+    build: .
+    env_file: .env
+    depends_on:
+      - redis
+      - postgres
+    command: celery -A app.tasks worker --loglevel=info
+
+  celery-beat:
+    build: .
+    env_file: .env
+    depends_on:
+      - redis
+    command: celery -A app.tasks beat --loglevel=info
+
+volumes:
+  redis_data:
+  postgres_data:
