--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,16 +1,16 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "python311Packages.setuptools", "python311Packages.wheel"]
+nixPkgs = [
+  "python311",
+  "python311Packages.setuptools",
+  "python311Packages.wheel"
+]
 
 [phases.install]
 cmds = [
-  "echo 'Verificando Python version:'",
   "python3.11 --version",
-  "echo 'Local do Python:'",
-  "which python3.11",
-  "echo 'Conteúdo do requirements.txt:'",
-  "cat requirements.txt",
-  "echo 'Iniciando instalação dos pacotes:'",
-  "python3.11 -m pip install --verbose -r requirements.txt --no-cache-dir"
+  "python3.11 -m ensurepip",
+  "python3.11 -m pip install --upgrade pip setuptools wheel",
+  "python3.11 -m pip install -r requirements.txt --no-cache-dir"
 ]
 
 [phases.build]
