--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,11 @@
 [phases.setup]
 nixPkgs = [
-  "python311",
-  "python311Packages.setuptools",
-  "python311Packages.wheel"
+  "python311Full"
 ]
 
 [phases.install]
 cmds = [
   "python3.11 --version",
-  "python3.11 -m ensurepip",
   "python3.11 -m pip install --upgrade pip setuptools wheel",
   "python3.11 -m pip install -r requirements.txt --no-cache-dir"
 ]
